@@ -120,7 +120,8 @@ module Sequel
     
     # Connects to a database.  See Sequel.connect.
     def self.connect(conn_string, opts = {}, &block)
-      if conn_string.is_a?(String)
+      case conn_string
+      when String
         if match = /\A(jdbc|do):/o.match(conn_string)
           c = adapter_class(match[1].to_sym)
           opts = {:uri=>conn_string}.merge(opts)
@@ -133,9 +134,11 @@ module Sequel
           uri.query.split('&').collect{|s| s.split('=')}.each{|k,v| uri_options[k.to_sym] = v} unless uri.query.to_s.strip.empty?
           opts = c.send(:uri_to_options, uri).merge(uri_options).merge(opts)
         end
-      else
+      when Hash
         opts = conn_string.merge(opts)
         c = adapter_class(opts[:adapter] || opts['adapter'])
+      else
+        raise Error, "Sequel::Database.connect takes either a Hash or a String, given: #{conn_string.inspect}"
       end
       # process opts a bit
       opts = opts.inject({}) do |m, kv| k, v = *kv
